# llm-wiki-rag

./: .coveragerc  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_AUDIT_2026-04-30.md  LICENSE  Makefile  README.md  ai-red-teaming-ecosystem-2026.md  ai-red-teaming-tools-comparison-2026.md  config.yml  pyproject.toml  setup_github.sh  wiki_schema.sample.yml  wiki_schema.yml
.github/workflows/: ci.yml
00_inputs/: urls.csv  urls_already_in_folder.csv  urls_dedup.csv  urls_filtered.csv  urls_not_in_folder.csv  urls_removed.csv
00_inputs/eval/: holdout_runs.jsonl  qrels.jsonl
01_data/: classification_manifest.csv  classifications.csv  notion_sources.csv
01_data/by_concept/: AI_Evaluations_&_Benchmarks.csv  Agentic_Misalignment.csv  Alignment_Faking_&_Scheming.csv  Constitutional_AI_(RLAIF).csv  Existential_Risk_&_Superintelligence.csv  Pretraining_Data_Filtering.csv  RLHF_&_Its_Limitations.csv  Responsible_Scaling_Policies.csv  Scalable_Oversight.csv  Weak-to-Strong_Generalization.csv
01_data/index/: manifest.csv
02_logs/: apply_log.csv  audit_2026-04-29.json  audit_log.csv  cleanup_metadata_log.csv  dedup_report.csv  fetch_log.csv  file_inventory.csv  fix_pdf_titles_log.csv  manual_review_moves.csv  manual_review_moves_2.csv  moved_to_delete.csv  quarantine_dupes_log.csv  refactor_log.csv  refinement.csv  refinement_apply_log.csv  removed_low_content.csv  rename_log.csv  title_fix_log.csv  unlink_log.csv
03_notion_drafts/: _health_check_2026-04-27.md
03_notion_drafts/_archive_pre-refactor_2026-04-27/: 01a_Existential-Risk.md  01b_AGI-Capability-and-Forecasting.md  01c_Alignment-Faking-and-Scheming.md  01d_Agentic-Misalignment-and-Control.md  02a_RLHF-and-Its-Limitations.md  02b_Constitutional-AI.md  02c_Scalable-Oversight.md  02d_Weak-to-Strong-and-ELK.md  02e_Pretraining-Filtering-and-Unlearning.md  02f_Interpretability.md  03a_Methodology.md  03b_Capability-Benchmarks.md  03c_Cyber-and-Bio-Benchmarks.md  03d_Agent-Benchmarks-and-Frameworks.md  03e_Other-Evaluations.md  04a_RSPs-and-Frontier-Frameworks.md  04b_Lab-Scorecards.md  04c_Other-Governance.md  05a_Educational.md  05b_Sources-and-Background.md  AI Alignment.md  AI Risk Mitigation.md  AI Safety.md  Evaluation.md  Model-level Mitigation.md  Multi-Agent.md  RSP.md  Sources_Background.md
03_notion_drafts/per_folder/: 01a_Existential-Risk.md  01b_AGI-Capability-and-Forecasting.md  01c_Alignment-Faking-and-Scheming.md  01d_Agentic-Misalignment-and-Control.md  01e_Multi-Agent.md  02a_RLHF-and-Its-Limitations.md  02b_Constitutional-AI.md  02c_Scalable-Oversight.md  02d_Weak-to-Strong-and-ELK.md  02e_Pretraining-Filtering-and-Unlearning.md  02f_Interpretability.md  03a_Methodology.md  03b_Capability-Benchmarks.md  03c_Cyber-and-Bio-Benchmarks.md  03d_Agent-Benchmarks-and-Frameworks.md  03e_Other-Evaluations.md  04a_RSPs-and-Frontier-Frameworks.md  04b_Lab-Scorecards.md  04c_Other-Governance.md  05a_Educational.md  05b_Sources-and-Background.md
03_notion_drafts/per_folder_compact/: AI Risk Mitigation.md  AI Safety.md  Evaluation.md
_index/: explorer.html
_index/saved_queries/: rlhf-failure-modes-test.md
docs/: ARCHITECTURE.md  ML_ALGORITHMS.md  REQ_SUMMARY.md
people_directory/: .gitignore  GAP_ANALYSIS_2026-07-04.md  WORKFLOW.md  ai-safety-people-directory.html  arxiv_titles.json  dataset_info.json  extra_data.json  fellowships_to_create.json  gen_directory.py  health_snapshot.json  health_trend.csv  health_trend.py  missing_papers.json  notion_conferences.json  notion_fellowships.json  org_categories.json  parse_extra.py  parse_raw.py  people.json  qc_directory.py  qc_metrics.csv  regen_guard.py  sync_fellowships.py  sync_vault.py
scripts/: README.md  __init__.py  apply_classifications.py  apply_refinement.py  apply_title_fixes.py  audit_2026_04_29.py  audit_frontmatter.py  backfill_05b_metadata.py  build_embeddings.py  build_index.py  build_manifest.py  build_wiki_index.py  check_vocab_sync.py  classify.py  cleanup_metadata.py  cli.py  dedup_report.py  fetch.py  fix_pdf_titles.py  fix_titles.py  manual_review_fixes.py  manual_review_fixes_2.py  multilevel_restructure.py  quarantine_dupes.py  query_index.py  refactor_vault.py  refine.py  regenerate_notion_sources.py  rename_files.py  restructure_02a_03e.py  retag_oov.py  stage_candidate.py  unlink_misclassified.py  wiki_mcp_server.py  wiki_retrieval.py
scripts/ingest/: __init__.py  dedup_report.py  fetch.py  stage_candidate.py
scripts/maintenance/: __init__.py  check_vocab_sync.py  cleanup_metadata.py  eval_retrieval.py  regenerate_notion_sources.py  research_loop.py  vault_init.py
scripts/serve/: __init__.py  mcp_app.py  mcp_server.py  query_cli.py  retrieval.py
scripts/wiki_lib/: cache.py  config.py  fields.py  frontmatter.py  locations.py  paths.py  schema.py  source_state.py  titles.py  vocab.py
skills/ai-safety-wiki/: SKILL.md
templates/vault/: PROCESS_HEALTH_CHECK.md  PROCESS_NEW_FILE.md  PROCESS_QUERY.md  _PROCESS_MAP.md
tests/: conftest.py  test_audit_files_excluded_regression.py  test_bm25.py  test_build_smoke.py  test_chunking.py  test_claude_md_contracts.py  test_count_files_by_field.py  test_embeddings_alignment.py  test_emit_manifest.py  test_filters.py  test_frontmatter_lib.py  test_invalidate_caches_integration.py  test_manifest_schema.py  test_mcp_error_envelope.py  test_mcp_input_validation.py  test_meta_doc_filter.py  test_path_resolver.py  test_paths_lib.py  test_retrieval_context.py  test_rrf.py  test_save_query.py  test_search_smoke.py  test_split_frontmatter.py  test_wiki_lib_smoke.py  test_wiki_schema_loader.py
tests/ingest/: test_fetch.py
tests/maintenance/: test_check_vocab_sync.py  test_cleanup_metadata.py  test_dedup_report.py  test_eval_retrieval.py  test_regenerate_notion_sources.py  test_research_loop.py  test_vault_init.py
tests/meta/: test_claude_md_contracts.py  test_cli_facade.py  test_e2e_build_and_search.py  test_e2e_full_stack.py  test_ml_algorithms_doc.py
tests/serve/: test_acronym_expansion.py  test_bm25.py  test_count_files_by_field.py  test_graph_retrieval.py  test_graph_tools.py  (+10 more)
(+53 files in other folders)
