[project]
name = "ai-safety-wiki-rag"
version = "0.1.0"
description = "RAG retrieval over the AI Safety wiki (BM25 + dense + rerank, exposed via MCP)."
requires-python = ">=3.10"
dependencies = [
    # MCP server (FastMCP lives in this package)
    "mcp>=1.2",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# build_index.py needs pypdf for PDF text extraction. Optional so the MCP
# server install path stays minimal — users who already built their index don't
# need to reinstall pypdf every time they run the server.
indexing = [
    "pypdf>=4",
]
# Priority #2: semantic embeddings (BGE-small via sentence-transformers).
# Optional so the MCP server boots without these if the user only wants BM25.
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
# Priority #3: cross-encoder reranker.
rerank = [
    "sentence-transformers>=3.0",
]
# Convenience: install everything.
all = [
    "pypdf>=4",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
# Test suite + lint/format tooling. Install with: uv sync --extra test
test = [
    "pytest>=8",
    "ruff>=0.5,<1.0",
]

[project.scripts]
wiki-mcp = "scripts.serve.mcp_server:main"

[tool.uv]
package = false  # treat this as a workspace, not a published package

[tool.pytest.ini_options]
# Repo root on sys.path so tests import the `scripts` package
# (e.g. `from scripts.serve import retrieval`). tests/ stays importable
# for shared helpers. Do NOT re-add "scripts" here — that would make every
# module importable under two names and duplicate the schema/config
# singleton caches.
pythonpath = [".", "tests"]
testpaths = ["tests"]
# pytest's default norecursedirs contains the literal `build`, which would silently skip tests/build/.
norecursedirs = [".*", "__pycache__", "node_modules"]
# Quiet warnings that come from optional deps, not from our code.
filterwarnings = [
    "ignore::DeprecationWarning:pypdf",
    "ignore::DeprecationWarning:sentence_transformers",
]
# Custom marks let us tag slow / network / model-loading tests for opt-in runs.
markers = [
    "slow: tests that take >5s (model loading, full build).",
    "needs_index: requires 01_data/index/ to be built.",
    "needs_embeddings: requires embeddings.npy to be built.",
    "needs_vault: requires the live AI Safety vault directory.",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    ".venv",
    "00_inputs",
    "01_data",
    "02_logs",
    "03_notion_drafts",
    "_index",
    "**/pytest-cache-files-*",
]

[tool.ruff.lint]
# Ruff defaults (E, F) plus warnings (W) and import sorting (I).
# E501 (line-too-long) is intentionally disabled: `ruff format` already
# wraps everywhere it can; the residual long lines are unwrappable strings
# (Field descriptions, file paths, f-strings) where E501 just adds noise.
# E741 (ambiguous names: `l`, `I`, `O`) ignored — too noisy for research code.
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
# CLI entrypoints keep argparse/main blocks after module docstrings.
"scripts/**/*.py" = ["E402"]

[tool.ruff.format]
# Defaults: double quotes, trailing commas where allowed.
